clearsession.yaml
apiVersion : v1
kind: Pod
metadata:
  name: django-app-clearsession
  labels:
    env  : dev
    app  : test_project
    tier : backend
    owner: SergeyRyapin
spec:
  containers:
    - name: clearsession
      image: sergryap/django_app
      command:
        - python
        - manage.py
        - clearsessions
  restartPolicy: OnFailure
