pod-nginx.yaml
apiVersion : v1
kind: Pod
metadata:
  name: nginx
  labels:
    env  : dev
    app  : test_project
    tier : backend
    owner: SergeyRyapin
spec:
  containers:
    - name : container-nginx
      image: nginx:latest
      ports:
        - containerPort: 80
