deployment-django-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
  labels:
    app  : django-app
    env  : prod
    owner: SergRyap
spec:
  replicas: 1
  selector:
    matchLabels:
      project: k8s-django
  template:
    metadata:
      labels:
        project: k8s-django
    spec:
      containers:
        - name: django-app
          image: sergryap/django_app
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol  : TCP
---
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  labels:
    app: django-app
    env: prod
    owner: SergRyap
spec:
  selector:
    project: k8s-django    # Selecting PODS with those Labels
  type: ClusterIP
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80
      targetPort: 80
