service-django-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app
  labels:
    run: django-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    run: django-app
